--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Folio - Personal features Template</title>
+    <title>Microconfig.io - configuration management engine</title>
     <meta content="configuration management, configuration framework, external configuration, configuration best practices, java configuration" name="keywords">
     <meta content="Microconfig - framework for configuration management" name="description">
 
