--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <div class="services-block">
                 <i class="ion-ios-lightbulb-outline"></i>
                 <span>Design to be used with any programming language</span>
-                <p class="separator">Collections of best practises for configuration management</p>
+                <p class="separator">Collections of best practices for configuration management</p>
             </div>
         </div>
 
