--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="container">
 
             <div class="logo" style="margin-top:15px;font-size:24px">
-                <a href="index.html" style="font-weight:bold">Microconfig.io</a>
+                <a href="http://microconfig.io" style="font-weight:bold">Microconfig.io</a>
             </div>
 
             <div class="responsive"><i data-icon="m" class="ion-navicon-round"></i></div>
