--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="container">
 
             <div class="logo" style="margin-top:15px;font-size:24px">
-                <a href="http://microconfig.io" style="font-weight:bold">Microconfig.io</a>
+                <a href="http://microconfig.io" style="font-weight:bold; color: #b8a07e">Microconfig.io</a>
             </div>
 
             <div class="responsive"><i data-icon="m" class="ion-navicon-round"></i></div>
@@ -98,7 +98,7 @@
 
             <div class="services-block">
                 <i class="ion-ios-lightbulb-outline"></i>
-                <span>Design to be used with any programming language</span>
+                <span>Designed to be used with any programming languages</span>
                 <p class="separator">Collections of best practices for configuration management</p>
             </div>
         </div>
@@ -174,7 +174,7 @@
                 <div class="col-lg-6">
                     <div class="contact-contact">
 
-                        <h2 class="mb-30">GET IN TOUCH</h2>
+                        <h2 class="mb-30">Contacts</h2>
 
                         <ul class="contact-details">
                             <li><span><a href="https://github.com/microconfig/microconfig">Github project</a></span></li>
