--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
     <title>Microconfig.io - configuration management engine</title>
-    <meta content="configuration management, configuration framework, external configuration, configuration best practices, java configuration" name="keywords">
+    <meta content="configuration management, configuration framework, external configuration, configuration best practices, java configuration, microservice configuration, microservice configs, config, configuration" name="keywords">
     <meta content="Microconfig - framework for configuration management" name="description">
 
     <!-- Google Fonts -->
@@ -70,7 +70,7 @@
         <div class="row justify-content-between">
             <div class="col-lg-7">
                 <div class="about-descr">
-                    <p class="p-heading">Microconfig is powerful tool for configuration management</p>
+                    <p class="p-heading">Microconfig is powerful tool for microservice configuration management</p>
                 </div>
             </div>
         </div>
