--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         </div>
 
         <div class="row">
-            Complete documentation you can find on <a href="https://github.com/microconfig/microconfig"> Github page</a>
+            Complete documentation you can find on <a href="https://github.com/microconfig/microconfig" style="padding-left: 3px"> Github page</a>
         </div>
     </div>
 
