--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <div class="services-block">
                 <i class="ion-ios-lightbulb-outline"></i>
                 <span>Designed to be used with any programming languages</span>
-                <p class="separator">Collections of best practices for configuration management</p>
+                <p class="separator">Collection of best practices for configuration management</p>
             </div>
         </div>
 
@@ -124,11 +124,12 @@
 
                 <div class="features-list">
                     <ul class="nav list-unstyled" id="features-flters">
-                        <li class="filter" id="placeholders_link" data-filter=".placeholders">placeholder resolving</li>
-                        <li class="filter" data-filter=".spell">expression language evaluation</li>
-                        <li class="filter" data-filter=".includes">Includes/Exludes</li>
-                        <li class="filter" data-filter=".templates">Arbitrary templates support</li>
-                        <li class="filter" data-filter=".composition">Composition</li>
+                        <li class="filter" id="placeholders_link" data-filter=".placeholders">Placeholders</li>
+                        <li class="filter" data-filter=".spell">Expression language</li>
+                        <li class="filter" data-filter=".includes">Includes</li>
+                        <li class="filter" data-filter=".overriding">Env specific config</li>
+                        <li class="filter" data-filter=".overriding">Overriding</li>
+                        <li class="filter" data-filter=".templates">Templates support</li>
                     </ul>
                 </div>
 
@@ -141,8 +142,12 @@
                         todo #{10 + 45 * 14}
                     </div>
 
+                    <div class="col-lg-4 col-md-6 features-thumbnail all overriding webdesign photography">
+                        todo
+                    </div>
+
                     <div class="col-lg-4 col-md-6 features-thumbnail all includes webdesig photographyn">
-                        todo #includes service-discovery-client
+                        #includes service-discovery-client
                     </div>
 
                     <div class="col-lg-4 col-md-6 features-thumbnail all templates webdesign photography">
