--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="container">
 
             <div class="logo" style="margin-top:15px;font-size:24px">
-                <a href="http://microconfig.io" style="font-weight:bold; color: #b8a07e">Microconfig.io</a>
+                <a href="http://microconfig.io" style="font-weight:bold; color: #b8a07e">Micro&copy;onfig.io</a>
             </div>
 
             <div class="responsive"><i data-icon="m" class="ion-navicon-round"></i></div>
@@ -70,7 +70,7 @@
         <div class="row justify-content-between">
             <div class="col-lg-7">
                 <div class="about-descr">
-                    <p class="p-heading">Microconfig is powerful tool for microservice configuration management</p>
+                    <p class="p-heading">Micro&copy;onfig is powerful tool for microservice configuration management</p>
                 </div>
             </div>
         </div>
