--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Microconfig.io - configuration management engine</title>
+    <title>Microconfig.io - powerful tool for microservice configuration management</title>
     <meta content="configuration management, configuration framework, external configuration, configuration best practices, java configuration, microservice configuration, microservice configs, config, configuration" name="keywords">
-    <meta content="Microconfig - framework for configuration management" name="description">
+    <meta content="Microconfig - powerful tool for microservice configuration management" name="description">
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,500,500i,600,600i,700,700i|Playfair+Display:400,400i,700,700i,900,900i"
