--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="row justify-content-between">
             <div class="col-lg-7">
                 <div class="about-descr">
-                    <p class="p-heading">Micro&copy;onfig is powerful tool for microservice configuration management</p>
+                    <p class="p-heading">Micro&copy;onfig is a powerful tool for microservice configuration management</p>
                 </div>
             </div>
         </div>
