--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                         </header>
 
                         <article style="margin-top: 10px">
-                            <b style="color: #b8a07e">#includes</b> service-discovery-client, logger-configuration
+                            <b style="color: #b8a07e">#include</b> service-discovery-client, logger-configuration
                         </article>
                     </div>
 
