--- a/docs.html
+++ b/docs.html
@@ -10,6 +10,7 @@
 <div id="app"></div>
 <script>
     window.$docsify = {
+     basePath: '/'
     }
   </script>
 <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
