--- a/docs.html
+++ b/docs.html
@@ -10,7 +10,7 @@
 <div id="app"></div>
 <script>
     window.$docsify = {
-     basePath: '/'
+     homepage: 'https://raw.githubusercontent.com/microconfig/microconfig/master/README.md'
     }
   </script>
 <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
