--- a/index.html
+++ b/index.html
@@ -195,8 +195,7 @@
         </div>
 
         <div class="row" style="font-weight: bold">
-            Complete documentation you can find on <a href="https://github.com/microconfig/microconfig"
-                                                      style="padding-left: 3px"> Github page</a>
+            <a href="/docs.html">Complete documentation</a>
         </div>
     </div>
 
