--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
         </div>
 
         <div class="row" style="font-weight: bold">
-            <a href="/docs.html">Complete documentation</a>
+            <a href="/docs.html">See Complete documentation</a>
         </div>
     </div>
 
