--- a/docs.html
+++ b/docs.html
@@ -10,7 +10,8 @@
 <div id="app"></div>
 <script>
     window.$docsify = {
-     homepage: 'https://raw.githubusercontent.com/microconfig/microconfig/master/README.md'
+     homepage: 'https://raw.githubusercontent.com/microconfig/microconfig/master/README.md',
+     repo: 'https://github.com/microconfig/microconfig'
     }
   </script>
 <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
