--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta charset="UTF-8">
+
+    <title>Microconfig.io - powerful tool for microservice configuration management</title>
+    <meta content="configuration management, configuration framework, external configuration, configuration best practices, java configuration, microservice configuration, microservice configs, config, configuration"
+          name="keywords">
+    <meta content="Microconfig - powerful tool for microservice configuration management" name="description">
+
     <link rel="stylesheet" href="//unpkg.com/docsify/themes/vue.css">
 </head>
 <body>
