--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
 <div id="app"></div>
 <script>
     window.$docsify = {
-     homepage: 'https://raw.githubusercontent.com/microconfig/microconfig/master/README.md',
-     repo: 'https://github.com/microconfig/microconfig'
+        homepage: 'https://raw.githubusercontent.com/microconfig/microconfig/master/README.md',
+        repo: 'https://github.com/microconfig/microconfig',
+        noEmoji: true
     }
-  </script>
+</script>
 <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
 </body>
 </html>
