--- a/index.html
+++ b/index.html
@@ -22,5 +22,7 @@
     }
 </script>
 <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
+<script src="//unpkg.com/prismjs/components/prism-yaml.min.js"></script>
+<script src="//unpkg.com/prismjs/components/prism-properties.min.js"></script>
 </body>
 </html>
