--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <div id="app"></div>
 <script>
     window.$docsify = {
+        name: 'Microconfig',
         homepage: 'https://raw.githubusercontent.com/microconfig/microconfig/master/README.md',
         repo: 'https://github.com/microconfig/microconfig',
         noEmoji: true
