updated js reference

--- a/index.html
+++ b/index.html
@@ -33,8 +33,6 @@
         logo: 'logo.svg'
     }
 </script>
-<script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
-<script src="//unpkg.com/prismjs/components/prism-properties.min.js"></script>
-<script src="//unpkg.com/prismjs/components/prism-yaml.min.js"></script>
+<script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
 </body>
 </html>
