--- a/index2.html
+++ b/index2.html
@@ -26,8 +26,8 @@
             line-height: 1em;
             margin-top: .4em;
             margin-bottom: .4em;
-            font-family: bloggerBold;
-            /*font-family: Metropolis, sans-serif;*/
+            /*font-family: bloggerBold;*/
+            font-family: Metropolis, sans-serif;
         }
 
         h2 {
@@ -38,8 +38,8 @@
             margin: 0;
             padding: 0;
             line-height: 1.7em;
-            font-family: blogger;
-            /*font-family: Metropolis, sans-serif;*/
+            /*font-family: blogger;*/
+            font-family: Metropolis, sans-serif;
         }
     </style>
 </head>
